                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-08-2006 changed: renamed region "Great Britain" to "UK" in the english language settings
 - 11-08-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 11-08-2006 updated: Dutch language file (Thnx to nightspirit)
 - 11-08-2006 updated: Slovenian language file (Thnx to Peter)
 - 10-08-2006 changed: added useThumbs and TreatAsFolder arguments to the browse dialog in python. Got rid of redundent code and changed some documentation.
 - 08-08-2006 updated: mplayer.dll - better support for dvr-ms files
 - 08-08-2006 fixed: Settings Profile window list was cleared before the window close animation was performed.
 - 07-08-2006 changed: the behaviour of the "all" items in music library
 - 07-08-2006 fixed: video files with large amounts of audio data before first video data would refuse to play. (dvr-ms files in particular)
 - 07-08-2006 added: Drempels screen saver
 - 07-08-2006 fixed: Visualisations were often sent incorrect samplerate and/or bitspersample info (unless the source audio was 16bit 48kHz)
 - 07-08-2006 fixed: bob deinterlacing wasn't working for dvdplayer, it overwrote texture before displaying second field
 - 07-08-2006 fixed: possible fix for UPnP leak
 - 07-08-2006 fixed: UPnP limit to 256 entries per container.
 - 06-08-2006 fixed: Skin bool settings with value didn't work (and caused eratic behaviour)
 - 06-08-2006 fixed: broken trainers could crash xbmc in some cases.
 - 06-08-2006 added: zipped trainers.|
 - 06-08-2006 fixed: Listcontrol crash when going from a long listing to a short listing.
 - 06-08-2006 changed: Folders should display with their labels by default, rather than the filenames.